# webapp

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: bootstrap-argocd.yml  ci.yml
fullstack/: CLAUDE.md  README.md  docker-compose.yml  seed.py  shutdown-dev.ps1  start-dev.ps1
fullstack/frontend/: Containerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
fullstack/frontend/e2e/: auth.spec.ts  dashboard.spec.ts  orders.spec.ts  payments.spec.ts  users.spec.ts
fullstack/frontend/src/: App.tsx  index.css
fullstack/infra/argocd/: project.yaml
fullstack/infra/database/: init.sql  postgres.yaml  redis.yaml
fullstack/infra/docs/: secret-rotation.md
fullstack/logs/: frontend.err  orders.err  payments.err  users.err
fullstack/ops/cd/: bootstrap-argocd.yml  deploy.yml
fullstack/ops/ci/: ci.yml
fullstack/scripts/: rotate-secrets.ps1
fullstack/services/orders/: Containerfile  alembic.ini  pyproject.toml
fullstack/services/orders/app/: main.py
fullstack/services/orders/app/api/: routes.py
fullstack/services/orders/app/core/: config.py
fullstack/services/orders/app/db/: session.py
fullstack/services/orders/app/models/: order.py
fullstack/services/orders/app/schemas/: order.py
fullstack/services/orders/migrations/: env.py
fullstack/services/orders/migrations/versions/: 0001_initial_schema.py
fullstack/services/orders/tests/: conftest.py  test_auth.py  test_orders.py
fullstack/services/payments/: Containerfile  pyproject.toml
fullstack/services/shared/: auth.py  log.py  (+3 more)
(+78 files in other folders)
